Проект завершен. Были добавлены функции для фильтрации задач, удаления и добавления. Были добавлены стили

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
 	<main>
 		<div class="container">
 				<div class="addTask_wrap">
-					<input type="text" id="inputTask" class="inputTask" placeholder="Введите задачу">
-					<button class="btn__addTask btn">Добавить задачу</button>
+					<input type="text" id="taskInput" class="taskInput" placeholder="Введите задачу">
+					<button class="btn__addTask btn" id="addTask">Добавить задачу</button>
 				</div>
+				<h2>Фильтр</h2>
 				<div class="btns_wrap">
-					<button class="btn">Показать все</button>
-					<button class="btn">Показать выполненные</button>
-					<button class="btn">Показать невыполненные</button>
+					<button class="btn" id="showAll">Показать все</button>
+					<button class="btn" id="showCompleted">Показать выполненные</button>
+					<button class="btn" id="showPending">Показать невыполненные</button>
 				</div>
+				<h2>Список задач</h2>
 				<ul id="taskList"></ul>
 		</div>
 	</main>
